# ZaawansowaneMetodyProgramowania

./: .gitignore  Makefile  commands.cmd  commands2.cmd  interp  tmp
config/: commands copy.cmd  commands.cmd  config.xml
inc/: AbstractInterp4Command.hh  Configuration.hh  Cube.hh  LibInterface.hh  MobileObj.hh  Port.hh  Reader.hh  Scene.hh  Sender.hh  Set4LibInterfaces.hh  klient.hh  toolbox.hh  xmlhandler.hh  xmlinterp.hh
package/interp4cmds-2libs-1.0/: Makefile  config.h  config.status  configure
package/interp4cmds-2libs-1.0/inc/: Makefile  Makefile.am
package/interp4cmds-2libs-1.0/src/: Makefile  Reader.cpp  Scene.cpp  Sender.cpp  interp4cmds
package/interp4cmds-2libs-1.0/src-lib/: Interp4Move.la  Interp4Pause.la  Interp4Rotate.la  Interp4Rotate_la-Interp4Rotate.lo  Interp4Set.la  Interp4Set_la-Interp4Set.lo  Makefile
package/interp4cmds-2libs-1.0/src-lib/.deps/: Interp4Move_la-Interp4Move.Plo  Interp4Pause_la-Interp4Pause.Plo  Interp4Set_la-Interp4Set.Plo
package/interp4cmds-2libs-1.0/src-lib/.libs/: Interp4Move.lai  Interp4Move.so.1.0.0  Interp4Pause.lai  Interp4Pause.so.1.0.0  Interp4Rotate.lai  Interp4Rotate.so.1.0.0  Interp4Set.lai  Interp4Set.so.1.0.0
package/interp4cmds-2libs-1.0/src/.deps/: interp4cmds-Set4LibInterfaces.Po  interp4cmds-main.Po
plugin/: Makefile
plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
serwer-z-tlem-qt5-qt6/: Makefile  Makefile.app
serwer-z-tlem-qt5-qt6/inc/: gsv-Const.h
src/: Configuration.cpp  Cube.cpp  LibInterface.cpp  Sender.cpp  Set4LibInterfaces.cpp  klient.cpp  main.cpp  toolbox.cpp  xmlinterp.cpp
zalazki/serwer-z-tlem-qt5-qt6/: Makefile.app
zalazki/zad4-pomoc/package-etap4/: Makefile  Makefile.am  Makefile.in  config.h.in  config.status  libtool
zalazki/zad4-pomoc/package-etap4 copy/: configure.ac
zalazki/zad4-pomoc/package-etap4 copy 2/inc/: Makefile.am
zalazki/zad4-pomoc/package-etap4 copy 2/src-lib/: Makefile.am
zalazki/zad4-pomoc/package-etap4 copy 3/src/: Makefile.am  Set4LibInterfaces.cpp  xmlinterp.cpp
zalazki/zad4-pomoc/package-etap4 copy/inc/: MobileObjConfig.hh
zalazki/zad4-pomoc/package-etap4 copy/plugin/: Makefile
zalazki/zad4-pomoc/package-etap4 copy/src/: LibInterface.cpp
zalazki/zad4-pomoc/package-etap4 temp2/: README
zalazki/zad4-pomoc/package-etap4 temp2/inc/: LibInterface.hh  Makefile.am
zalazki/zad4-pomoc/package-etap4 temp2/src/: Makefile.am
zalazki/zad4-pomoc/package-etap4 temp2/src-lib/: Interp4Set.cpp  Makefile.am
zalazki/zad4-pomoc/package-etap4 temp3/: Makefile.am
zalazki/zad4-pomoc/package-etap4 temp3/inc/: Interp4Move.hh  MobileObj.hh
zalazki/zad4-pomoc/package-etap4 template/: Makefile.am  configure.ac
zalazki/zad4-pomoc/package-etap4/plugin/: Makefile.am
zalazki/zad4-pomoc/package-etap4/plugin/src/: Interp4Move.cpp
zalazki/zalazek-xmlinterp4config/: xmlinterp4config
(+95 files in other folders)
