noinst_HEADERS= AbstractComChannel.hh \
                AbstractInterp4Command.hh \
                AbstractMobileObj.hh \
                AccessControl.hh \
                Configuration.hh \
                geomVector.hh \
                klient.hh \
                LibInterface.hh \
                MobileObj.hh \
                MobileObjConfig.hh \
                Port.hh \
                Reader.hh \
                Scene.hh \
                Sender.hh \
                Set4LibInterfaces.hh \
                Vector3D.hh \
                xmlinterp.hh \
                Interp4Move.hh \
                Interp4Pause.hh \
                Interp4Rotate.hh \
                Interp4Set.hh
