noinst_HEADERS= AbstractComChannel.hh \
                AbstractInterp4Command.hh \
                AbstractMobileObj.hh \
                AccessControl.hh \
                Configuration.hh \
                geomVector.hh \
                klient.hh \
                LibInterface.hh \
                MobileObj.hh \
                MobileObjConfig.hh \
                Port.hh \
                Reader.hh \
                Scene.hh \
                Sender.hh \
                Set4LibInterface.hh \
                Vector3D.hh \
                xmlhandler.hh \
                xmlinterp.hh \
                Interp4Move \
                Interp4Pause \
                Interp4Rotate \
                Interp4Set

