lib_LTLIBRARIES = libInterp4Move.la libInterp4Rotate.la libInterp4Set.la libInterp4Pause.la

libInterp4Move_la_SOURCES = src/Interp4Move.cpp
libInterp4Move_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Move_la_LDFLAGS = -module -version-info 1:0:0

libInterp4Rotate_la_SOURCES = src/Interp4Rotate.cpp
libInterp4Rotate_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Rotate_la_LDFLAGS = -module -version-info 1:0:0

libInterp4Set_la_SOURCES = src/Interp4Set.cpp
libInterp4Set_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Set_la_LDFLAGS = -module -version-info 1:0:0

libInterp4Pause_la_SOURCES = src/Interp4Pause.cpp
libInterp4Pause_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
libInterp4Pause_la_LDFLAGS = -module -version-info 1:0:0